tests/paczka1/small_fuzzy/37737408.err
Error in line 2: IsrpDEu S479 90,6
Error in line 4: gLalk6VmnKU S779 70,6
